# tauri-plugin-spotlight

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/react-app/: package.json  pnpm-lock.yaml
examples/react-app/src/: App.tsx  main.tsx  style.css
examples/react-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-app/src-tauri/src/: main.rs
src/: config.rs  error.rs  lib.rs  spotlight.rs  spotlight_macos.rs  spotlight_others.rs
src/spotlight_macos/: mod.rs  panel.rs  spotlight.rs
