[package]
name = "tauri-plugin-spotlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all"] }
cocoa = { version = "0.24.1" }
objc =  { version = "0.2.7" }
