[package]
name = "tauri-plugin-spotlight"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = { version = "0.24.1" }
objc =  { version = "0.2.7" }
